--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Title of Your Website"> <!-- CAN EDIT -->
-  <meta property="og:image" content="logo.png"> <!-- CAN EDIT -->
-  <meta property="og:description" content="Description of the website"> <!-- CAN EDIT -->
-  <meta name="theme-color" content="#0079F2"> <!-- CAN EDIT (use same value as the --button-primary-default variable in style.css) -->
+  <meta property="og:title" content="Title of Your Website"> <!-- Tittle -->
+  <meta property="og:image" content="logo.png"> <!-- PFP -->
+  <meta property="og:description" content="Description of the website"> <!-- Desc -->
+  <meta name="theme-color" content="#0079F2"> <!-- Theme Color (use same value as the --button-primary-default variable in style.css) -->
 
   <meta name="description" content="Free Web tutorials">
   
@@ -18,7 +18,7 @@
   <div class="card">
     <div class="top">
       <div class="logo-wrapper">
-        <img src="logo.png"> <!-- CAN EDIT -->
+        <img src="logo.png"> <!-- PFP -->
       </div>
   
       <div class="text">
